added more screens

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,9 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    buildFeatures {
+        viewBinding true
+    }
     kotlinOptions {
         jvmTarget = '1.8'
     }
@@ -47,4 +50,6 @@ dependencies {
     implementation "androidx.navigation:navigation-fragment-ktx:2.5.3"
     implementation "androidx.navigation:navigation-ui-ktx:2.5.3"
     implementation("androidx.navigation:navigation-dynamic-features-fragment:2.5.3")
+
+    implementation'com.kyanogen.signatureview:signature-view:1.2'
 }
